Fix legend overflow bug on dashboard vis

--- a/src/ui/public/visualize/components/_visualization.scss
+++ b/src/ui/public/visualize/components/_visualization.scss
@@ -2,7 +2,7 @@
 .visualize {
   display: flex;
   flex: 1 1 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 // SASSTODO: Too risky to change to BEM naming
@@ -11,7 +11,7 @@
   flex-direction: column;
   height: auto;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
   position: relative;
   padding: $euiSizeS;
   flex: 1 1 100%;
